--- a/flux-backend/.env.prod-templates
+++ b/flux-backend/.env.prod-templates
@@ -35,15 +35,15 @@ JWT_REDIS_EXPIRE_MINUTES = 525600
 # 数据库类型，'mysql'
 DB_TYPE = 'mysql'
 # 数据库主机
-DB_HOST = 'xxxx.mysql.rds.aliyuncs.com'
+DB_HOST = 'localhost'
 # 数据库端口
 DB_PORT = 3306
 # 数据库用户名
-DB_USERNAME = 'flux-data'
+DB_USERNAME = 'root'
 # 数据库密码
-DB_PASSWORD = 'xxxx'
+DB_PASSWORD = 'qwer1234'
 # 数据库名称
-DB_DATABASE = 'xxxx'
+DB_DATABASE = 'flux-data'
 # 是否开启sqlalchemy日志
 DB_ECHO = true
 # 允许溢出连接池大小的最大连接数
