修改数据库密码

--- a/flux-backend/.env.dev
+++ b/flux-backend/.env.dev
@@ -35,8 +35,10 @@ JWT_REDIS_EXPIRE_MINUTES = 525600
 # 数据库类型，'mysql'
 DB_TYPE = 'mysql'
 # 数据库主机
-DB_HOST = 'localhost'
+# DB_HOST = 'localhost'
+DB_HOST = 'sh-cdb-mgp3jx8s.sql.tencentcdb.com'
 # 数据库端口
+# DB_PORT = 3306
 DB_PORT = 3306
 # 数据库用户名
 DB_USERNAME = 'root'
