--- a/flux-backend/.env.prod-templates
+++ b/flux-backend/.env.prod-templates
@@ -35,13 +35,13 @@ JWT_REDIS_EXPIRE_MINUTES = 525600
 # 数据库类型，'mysql'
 DB_TYPE = 'mysql'
 # 数据库主机
-DB_HOST = 'localhost'
+DB_HOST = 'sh-cdb-mgp3jx8s.sql.tencentcdb.com'
 # 数据库端口
-DB_PORT = 3306
+DB_PORT = 26000
 # 数据库用户名
 DB_USERNAME = 'root'
 # 数据库密码
-DB_PASSWORD = 'qwer1234'
+DB_PASSWORD = 'GUO147jin.'
 # 数据库名称
 DB_DATABASE = 'flux-data'
 # 是否开启sqlalchemy日志
